--- a/src/components/home/viewQuestion/answers/manipulation/answerManipulation.css
+++ b/src/components/home/viewQuestion/answers/manipulation/answerManipulation.css
@@ -38,6 +38,6 @@
 .edit-answer-form .owner-wrapper img{
    border-radius: 50%;
    width: 3rem;
-   height: auto;
+   height: 3rem;
    object-fit: cover;
 }
